Fix overflowing nav button in smaller screens, like iphone 5

--- a/css/site.scss
+++ b/css/site.scss
@@ -62,6 +62,14 @@ nav {
         }
     }
 
+    .navbar-brand {
+        > img {
+            @media(max-width: 360px) {
+                max-width: 200px;
+            }
+        }
+    }
+
     ul {
         & > li {
             & > a {
